...
          TaskFavorSelector(
            setFavor: (bool isFavor) {
              favor = isFavor;
            },
          ),
          TextFormField(
            key: const ValueKey('Task creation'),
            maxLength: 40,
            onSaved: (String value) {
              widget.createTask(value, dateTimeToComplete, notificationTime, importance, favor);
              },
            validator: (value){
              if(value.length > 40){
...
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                ),
                SimpleDialogOption(
                  child: Text(
                    'СОЗДАТЬ',
                    style: TextStyle(
                        fontWeight: FontWeight.w500,
                        color: Color(0xff424242),
                        fontSize: 16
                    ),
                  ),
...
