...
                child: CircularProgressIndicator(
                  valueColor: AlwaysStoppedAnimation<Color>(Color(0xff6200EE)),
                )
            );
          } else if (state is BranchInUsageState){
            return CustomScrollView(
              key: ValueKey('Branch list'),
              slivers: <Widget>[
                SliverToBoxAdapter(
                  child: Padding(
                    padding: const EdgeInsets.fromLTRB(12, 0, 12, 8),
                    child: AllBranchCard(allBranchesProgressInfo: state.allBranchesTasksInfo),
                  ),
...
      ),
    );
  }

  Widget displayAddButton(BuildContext context){
    return InkWell(
      key: ValueKey('create branch'),
      onTap: () {
        showDialog(
          context: context,
          builder: (context0) {
            return CreateBranchForm(
              createBranch: (String branchName, Map<Color, Color> theme) {
...
