...
          },
          child: Builder(
            builder: (context) {
              if (task.isDone)
                return Icon(
                  Icons.close,
                  key: ValueKey('Task completed'),
                );
              return Icon(
                Icons.check,
                key: ValueKey('Task uncompleted'),
              );
            },
          ),
        ),
      ),
    );
...
