...
              Padding(
                padding: const EdgeInsets.symmetric(horizontal: 16, vertical: 4),
                  child: Builder(
                    builder: (context) {
                      if (state.task.notificationTime == null)
                        return Text(
                          'Напомнить',
                          style: TextStyle(
                            color: Color(0xff616161),
                            fontSize: 15
                          ),
                        );
                      return Text(
...
              Padding(
                padding: const EdgeInsets.symmetric(horizontal: 16, vertical: 4),
                child: Builder(
                  builder: (context) {
                    if (state.task.dateToComplete == null)
                      return Text(
                        'Добавить дату выполнения',
                        style: TextStyle(
                          color: Color(0xff616161),
                          fontSize: 15,
                        ),
                      );
                    return Text(
...
