...
                                        fontSize: 16,
                                        color: Colors.black87
                                    ),
                                  );
                                }
                                return Text(
                                  'Напомнить',
                                  style: TextStyle(
                                    fontWeight: FontWeight.w400,
                                    fontSize: 16,
                                    color: Colors.black87,
                                  ),
                                );
...
                                    fontSize: 16,
                                    color: Colors.black87
                                  ),
                                );
                              }
                              return Text(
                                'Дата выполнения',
                                style: TextStyle(
                                  fontWeight: FontWeight.w400,
                                  fontSize: 16,
                                  color: Colors.black87,
                                ),
                              );
...
