...
              color: Color(0xff424242),
            ),
          ),
          Padding(
            padding: const EdgeInsets.only(top: 8),
            child: TextFormField(
              key: ValueKey('create branch TextField'),
              onSaved: (String value) {
                widget.createBranch(value, themes[_selectedTheme]);
              },
              validator: (value) {
                if(value.length > 10){
                  return 'Превышена допустимая длина названия ветки задач';
...
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                ),
                SimpleDialogOption(
                  child: Text(
                    'СОЗДАТЬ',
                    style: TextStyle(
                      fontSize: 16,
                      fontWeight: FontWeight.w500,
                      color: Color(0xff424242),
                    ),
                  ),
...
